Fixing animation and view of the gif container on mobile.

--- a/src/components/Still/Still.css
+++ b/src/components/Still/Still.css
@@ -2,6 +2,13 @@
   margin: 1rem;
   transition: all .2s ease-in-out;
   text-align: center;
+  /* width: 400px; */
+}
+
+.Still img {
+  max-width: 100%;
+  max-height: 100%;
+  /* height: auto; */
 }
 
 .Still:hover {
