--- a/src/containers/GifContainer/GifContainer.css
+++ b/src/containers/GifContainer/GifContainer.css
@@ -3,8 +3,40 @@
   flex-wrap: wrap;
   align-content: space-between;
   width: 80%;
+  /* animation: slide-in-fwd-center 1.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
+  animation: swing-in-top-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
 }
 
 .GifContainer > * {
-  flex: 1 1 160px;
+  flex: 1 1 21%;
+}
+
+@media (max-width: 600px) {
+  .GifContainer > * {
+    flex: 1 1 160px;
+  }
+}
+
+/* @keyframes slide-in-fwd-center {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+} */
+
+@keyframes swing-in-top-fwd {
+  0% {
+    transform: rotateX(-100deg);
+    transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0deg);
+    transform-origin: top;
+    opacity: 1;
+  }
 }
